added form id, changed placeholder img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Search input field -->
         <nav>
           <div class="nav-wrapper z-depth-0 searchBar">
-            <form>
+            <form id="searchForm">
               <div class="input-field">
                 <input id="search" type="search" required />
                 <label class="label-icon" for="search"
@@ -119,9 +119,8 @@
           <div class="col s12 m7">
             <div class="card">
               <div class="card-image" id="mapLocation">
-                <img
-                  src="https://images.unsplash.com/photo-1450977894548-1b13203524f5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80"
-                />
+                <img src="https://via.placeholder.com/500x333" />
+                <!-- img aspect ration 1.499; -->
               </div>
               <div class="card-content mapData">
                 <p>
