--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css"
+      type="text/css"
       rel="stylesheet"
     />
     <title>Document</title>
