--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
           <div class="nav-wrapper z-depth-0 searchBar">
             <form id="searchForm">
               <div class="input-field">
-                <input id="search" type="search" required />
+                <input placeholder="City, State" id="search" type="search" required />
                 <label class="label-icon" for="search"
-                  ><i class="material-icons">search</i></label
-                >
+                  ><i class="material-icons" >search</i></label>
                 <i class="material-icons">close</i>
               </div>
             </form>
