added all stat for evaluation

--- a/index.html
+++ b/index.html
@@ -140,27 +140,12 @@
             <div class="col s12 m5">
               <div class="card large displayText">
                 <h3 id="city-name" class="white-text"></h3>
+                <p id ="pop" class="white-text"></p>
                 <p id="income" class="white-text"></p>
                 <p id="smarts" class="white-text"></p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Dolorem ipsa mollitia molestias eos laborum, architecto facere
-                  delectus corrupti aspernatur nobis libero voluptatum? Sed
-                  quisquam fugit quod, repellat quasi at nisi ullam delectus
-                  cupiditate ea excepturi, aut pariatur recusandae tempore quia
-                  illo adipisci quis? Quam, culpa numquam vel minus perferendis,
-                  temporibus dolore perspiciatis maxime odio nobis aperiam
-                  nesciunt! Nostrum, facere, minima doloribus error quis,
-                  officia nobis consequatur reiciendis magni maxime sequi? Quos,
-                  veritatis nisi dignissimos, reprehenderit saepe fugit
-                  cupiditate nesciunt accusantium officia quam assumenda eaque
-                  molestias cumque repellendus quas, dolore impedit accusamus
-                  nobis sint quibusdam eum aut ab aliquid! Excepturi, rerum?
-                  Obcaecati quasi, accusantium maxime sapiente suscipit dolorem
-                  architecto sit consequuntur animi debitis, error laborum.
-                  Saepe, ipsum. Recusandae qui libero adipisci quia non
-                  exercitationem debitis, cum unde ratione dolore rem nobis
-                  nihil cumque commodi aliquid earum numquam esse corporis eos!
-                  Esse cum vitae autem non ullam voluptates totam!
+                <p id="age1" class="white-text"></p>
+                <p id="age2" class="white-text"></p>
+                  
                 </p>
               </div>
             </div>
