--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
             </form>
           </div>
         </nav>
+        
         <div class="divider"></div>
         <!-- Search criteria dropdown seletor -->
-        <div class="input-field col s12 dropSearch">
 
-        </div>
 
         <!-- Search Favorites
         <ul class="dispSearchHistory">
@@ -105,6 +104,16 @@
             <h6>Section 3</h6>
             <p>Stuff</p>
           </div>
+      </div>
+
+      <div>
+        <form action="#">
+          <p class="range-field">
+              <p></p>
+              </p>
+            <input type="range" id="test5" min="0" max="100" />
+          </p>
+        </form>
       </div>
 
       <!-- Row 1 Column 2 - Image, modal, search output -->
