--- a/index.html
+++ b/index.html
@@ -34,11 +34,6 @@
     <nav>
       <div class="nav-wrapper navBar">
         <a href="#" class="brand-logo center">Urban El Dorado </a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li id="navLink1"><a href="sass.html">Sass</a></li>
-          <li id="navLink2"><a href="badges.html">Components</a></li>
-          <li id="navLink3"><a href="collapsible.html">JavaScript</a></li>
-        </ul>
       </div>
     </nav>
 
@@ -83,7 +78,7 @@
                 
               </div>
               <div class="card-action" id="mapExternalLink">
-                <a href="#">Link to city websites, crime stats, etc?</a>
+                <a href="#"></a>
               </div>
             </div>
           </div>
