--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <p id="smarts" class="white-text"></p>
                 <p id="age1" class="white-text"></p>
                 <p id="age2" class="white-text"></p>
+                <p id="averageSoldPrice"></p>
                   
                 </p id= "grade" class=white-text></p>
               </div>
