--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navbar at top of page -->
     <nav>
       <div class="nav-wrapper navBar">
-        <a href="#" class="brand-logo center">Urban El Dorado </a>
+        <a href="https://images.unsplash.com/photo-1494611221642-02b0b6d486ab?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" class="brand-logo center">Urban El Dorado </a>
       </div>
     </nav>
 
@@ -91,13 +91,32 @@
           <div class="row">
             <div class="col s12 m5">
               <div class="card large displayText">
-                <h3 id="city-name" class="white-text"></h3>
-                <p id="pop" class="white-text"></p>
+                <h3 class="card-content" id="city-name" class="white-text"></h3>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
+                <p class="card-contet" id="pop" class="white-text"></p>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
                 <p id="income" class="white-text"></p>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
                 <p id="smarts" class="white-text"></p>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
                 <p id="age1" class="white-text"></p>
+
+                <div class="divider dispDiv"id="dataDiv" ></div>
+
                 <p id="age2" class="white-text"></p>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
                 <p id="averageSoldPrice" class="white-text"></p>
+
               </div>
             </div>
           </div>
