--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
         </div>
       </div>
     </div>
+      <!-- Modal Trigger -->
+      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+      
+      <!-- Modal Structure -->
+      <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h4>Query not found</h4>
+          <p>Please make sure your input is in "city, state" format.</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-close waves-effect waves-green btn-flat">Dismiss</a>
+        </div>
+      </div>
   </body>
 
   <script type="text/javascript" src="js/materialize.js"></script>
