updated City Data Display to be device responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navbar at top of page -->
     <nav>
       <div class="nav-wrapper navBar">
-        <a href="#" class="brand-logo center">Urban El Dorado </a>
+        <a href="https://images.unsplash.com/photo-1494611221642-02b0b6d486ab?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" class="brand-logo center">Urban El Dorado </a>
       </div>
     </nav>
 
@@ -74,7 +74,7 @@
       <div class="col s12 m8 l9">
         <div>
           <!-- This is where map will go  -->
-          <div class="col s12 m7">
+          <div class="col s12 m6">
             <div class="card">
               <div class="card-image" id="mapLocation">
                 <img src="https://via.placeholder.com/500x333" />
@@ -89,15 +89,34 @@
 
           <!-- large display card -->
           <div class="row">
-            <div class="col s12 m5">
-              <div class="card large displayText">
-                <h3 id="city-name" class="white-text"></h3>
-                <p id="pop" class="white-text"></p>
-                <p id="income" class="white-text"></p>
+            <div class="col s12 m6">
+              <div class="card-panel displayText">
+                <h3 class="card-content" id="city-name" class="white-text"></h3>
+
+                <div class="card-content divider dispDiv" dispDiv" id="dataDiv" ></div>
+
+                <p class="card-contet" id="pop" class="white-text"></p>
+
+                <div class="card-content divider dispDiv" id="dataDiv"></div>
+
+                <p id="income" class="white-text" class="white-text"></p>
+
+                <div class="card-content divider dispDiv" id="dataDiv"></div>
+
                 <p id="smarts" class="white-text"></p>
+
+                <div class="divider dispDiv" id="dataDiv"></div>
+
                 <p id="age1" class="white-text"></p>
+
+                <div class="card-content divider dispDiv"id="dataDiv" ></div>
+
                 <p id="age2" class="white-text"></p>
+
+                <div class="card-content divider dispDiv" id="dataDiv"></div>
+
                 <p id="averageSoldPrice" class="white-text"></p>
+
               </div>
             </div>
           </div>
