--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       type="text/css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Urban El Dorado</title>
   </head>
 
   <body>
