navbar and styling

--- a/index.html
+++ b/index.html
@@ -135,6 +135,24 @@
         </div>
       </div>
   </body>
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Urban El Dorado</h5>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Find Your New City</h5>
+
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      @ 2021 Denver Bootcamp
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" src="js/materialize.js"></script>
   <script src="js/mapScript.js"></script>
